# huffman

./: CMakeLists.txt  run.sh
include/: binary.h  huffman_tree.h  node.h  node_comparator.h
src/: binary.cc  huffman_tree.cc  main.cc  node.cc  node_comparator.cc
